--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sunil-portfolio",
+  "name": "nnamdi-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,8 +19,8 @@
     "typewriter-effect": "^2.18.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
